--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,11 +5,13 @@
     box-sizing: border-box;
   }
   
+
+
   body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
     background-color: #fff; /* צבע רקע fallback במידה והתמונה לא נטענת */
-    background-image: url("../img/background1.jpg"); /* הנתיב לתמונה */
+    /*background-image: url("../img/background1.jpg"); /* הנתיב לתמונה */
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed; /* אפקט פרלקס קל, אם תרצה אפשר להחליף ב-scroll */
@@ -17,7 +19,6 @@
     color: #333;
     direction: rtl;
   }
-  
   
   /* הגדרת קונטיינר מרכזי */
   .container {
